replays/errorlog-20181104-091601-0500-1541340961-32-32-1.log

Turn 1
================================================================
error: communication error with bot: Problem writing to pipe, errno was: 0 (No error)
Last input received was:

    command_queue = []
                ^
SyntaxError: invalid syntax

